@@ -1,17 +1,18 @@
 --- #YAML:1.0
 name: iCal-Parser
-version: 1.03
+version: 1.06
 author:
   - Rick Frankel, cpan@rickster.com
 abstract: Parse iCalendar files into a data structure
 license: perl
 requires:
   DateTime::Format::ICal: 0.08
+  File::Basename: 0
   IO::File: 1.1
   Test::More: 0.47
   Text::vFile::asData: 0.02
 provides:
   iCal::Parser:
     file: lib/iCal/Parser.pm
-    version: 1.03
+    version: 1.06
 generated_by: Module::Build version 0.2606
