@@ -355,7 +355,7 @@ $VAR1 = {
   },
   'cals' => [
     {
-      'X-WR-CALNAME' => 'Calendar 1',
+      'X-WR-CALNAME' => '05exdate',
       'index' => 1,
       'X-WR-RELCALID' => 1,
       'PRODID' => '-//Testing//Test//EN',
