@@ -238,7 +238,7 @@ $VAR1 = {
   },
   'cals' => [
     {
-      'X-WR-CALNAME' => 'Calendar 1',
+      'X-WR-CALNAME' => '07rrule',
       'index' => 1,
       'X-WR-RELCALID' => 1,
       'PRODID' => '-//Testing//Test//EN',
