@@ -106,7 +106,7 @@ $VAR1 = {
           'events' => {},
           'cals' => [
                       {
-                        'X-WR-CALNAME' => 'Calendar 1',
+                        'X-WR-CALNAME' => '08mozilla-bad-todo',
                         'index' => 1,
                         'X-WR-RELCALID' => 1,
                         'PRODID' => '-//Testing//Test//EN',
